# winter

./: .gitignore  Cargo.toml  README.md  build.rs
crates/backend/simple/: Cargo.toml
crates/backend/simple/src/: constructs.rs  lib.rs  primitives.rs  shapes.rs  uniform.rs  updater.rs  vao.rs
crates/backend/simple/src/uniform/: matrix.rs  scalar.rs  vector.rs
crates/core/: Cargo.toml  build.rs
crates/core/examples/colorchanger-raw/: bin.rs  frag_shader.glsl
crates/core/examples/key_callback-raw/: bin.rs
crates/core/examples/simple-raw/: bin.rs
crates/core/examples/window-raw/: bin.rs
crates/core/src/: buffer.rs  lib.rs  opengl.rs  raw.rs  uniform.rs  vao.rs
crates/core/src/buffer/: index.rs  vertex.rs
crates/core/src/buffer/vertex/: dynamic.rs  stati.rs
crates/frontend/main/: Cargo.toml
crates/frontend/main/examples/colorchanger-framework/: bin.rs  frag_shader.glsl
crates/frontend/main/examples/colorchanger-raw/: bin.rs
crates/frontend/main/examples/game_of_life-framework/: bin.rs  frag_shader.glsl
crates/frontend/main/examples/game_of_life-framework/game_of_life/examples/: ascii.rs
crates/frontend/main/examples/key_callback-raw/: bin.rs
crates/frontend/main/examples/merge-framework/: bin.rs  frag_shader.glsl
crates/frontend/main/examples/serde-framework/: bin.rs
crates/frontend/main/examples/simple-raw/: bin.rs
crates/frontend/main/examples/snake-framework/: bin.rs
crates/frontend/main/examples/snake-framework/snake/examples/: ascii.rs
crates/frontend/main/examples/uniforms-framework/: bin.rs  frag_shader.glsl
crates/frontend/main/examples/window-raw/: bin.rs
crates/frontend/main/src/: context.rs  lib.rs  shader.rs
crates/frontend/main/src/context/: window.rs
crates/frontend/main/src/shader/: program.rs
crates/misic/game_of_life/: Cargo.toml  game_of_life.rs
crates/misic/snake/: Cargo.toml
examples/colorchanger-framework/: bin.rs  frag_shader.glsl
examples/colorchanger-raw/: bin.rs  frag_shader.glsl  vertex_shader.glsl
examples/game_of_life-framework/: bin.rs  vertex_shader.glsl
examples/game_of_life-framework/game_of_life/: Cargo.toml
examples/key_callback-raw/: bin.rs
examples/merge-framework/: bin.rs
examples/serde-framework/: bin.rs
examples/simple-raw/: bin.rs
examples/snake-framework/: bin.rs  frag_shader.glsl  vertex_shader.glsl
examples/snake-framework/snake/: Cargo.toml  snake.rs
examples/snake-framework/snake/examples/: ascii.rs
examples/window-raw/: bin.rs
glad-gles2/: Cargo.toml
glad-gles2/src/: gl.rs  lib.rs
src/: buffer.rs  common.rs  context.rs  lib.rs  opengl.rs  shader.rs  simple.rs  vao.rs
src/context/: primitives.rs  window.rs
src/raw/: buffers.rs  shader.rs
src/simple/: buffer.rs  misic.rs  shader.rs  vao.rs
src/simple/vao/: primitives.rs
src/vao/: simple.rs
src/vao/simple/: constructs.rs  primitives.rs  shapes.rs  updater.rs
