[workspace]
members = [
    "crates/core",
    "crates/backend/simple",
    "crates/frontend/main",
    "crates/misic/snake",
    "crates/misic/game_of_life",
]
resolver = "2"

[workspace.dependencies]
winter-simple ={ version = "1.6.1",path = "crates/backend/simple"}
winter-core ={ version = "1.6.1",path = "crates/core"}
game_of_life = {path = "crates/misic/game_of_life"}
snake ={ path = "crates/misic/snake"}
glfw = {version = "0.55"}
glmath = { version = "0.1",features = ["bytemuck"],git = "https://github.com/fourrth/glmath.git"}
bytemuck = {version = "1",features = ["must_cast"]}
