[package]
name = "winter-simple"
version = "1.6.0-alpha"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = []
serde = ["dep:serde","glmath/serde"]

[dependencies]
winter-core = { version = "1.6.0-alpha",path = "../../core"}
glmath = { version = "0.1.*",features = ["bytemuck"],git = "https://github.com/fourrth/glmath.git"}
bytemuck = {version = "1.*",features = ["must_cast"]}
serde = { version = "1.0.*",optional = true,features = ["derive"]}