[package]
name = "winter-simple"
version = "1.6.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = []
serde = ["dep:serde","glmath/serde"]

[dependencies]
winter-core = {workspace = true}
glmath = {workspace = true,features = ["bytemuck"]}
bytemuck = {version = "1.*",features = ["must_cast"]}
serde = { version = "1.0.*",optional = true,features = ["derive"]}