[package]
name = "winter"
version = "1.6.4"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]


[[example]]
name = "serde-framework"
path = "examples/serde-framework/bin.rs"
required-features = ["serde"]

[[example]]
name = "merge-framework"
path = "examples/merge-framework/bin.rs"

[[example]]
name = "snake-framework"
path = "examples/snake-framework/bin.rs"

[[example]]
name = "game_of_life-framework"
path = "examples/game_of_life-framework/bin.rs"

[[example]]
name = "colorchanger-framework"
path = "examples/colorchanger-framework/bin.rs"

[[example]]
name = "uniforms-framework"
path = "examples/uniforms-framework/bin.rs"

[features]
default = []
serde = ["winter-simple/serde"]

[dependencies]
winter-simple ={ workspace = true}
winter-core ={ workspace = true}
glfw = {workspace = true}

[dev-dependencies]
glmath = { workspace = true}
bytemuck = {workspace = true}
game_of_life = {workspace = true}
snake ={workspace = true}
serde_json = {version = "1.0"}
once_cell = {version = "1.19"}