[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"
description = "Conway's Game of life"

[lib]
path = "game_of_life.rs"

[[example]]
name = "ascii"
path = "examples/ascii.rs"

[dependencies]
rand = {version = "0.8"}
serde = {version = "1.0",features = ["derive"]}


[dev-dependencies]
crossterm ={version = "0.27"}

